--- a/assets/header.css
+++ b/assets/header.css
@@ -2,8 +2,9 @@
     align-items: center;
     justify-content: center;
     text-align: center;
+    vertical-align: middle;
     width: 100%;
     height: 100%;
-    padding: 10px;
+    padding-left: 10px;
     line-height: var(--bs-body-line-height);
 }
